added backend service. local switch working

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -4,6 +4,7 @@
     <Label [text]="message"></Label>
 
     <Label [text]="localMessage"></Label>
+    <Label [text]="localSwitchMessage"></Label>
 
     <Switch (checkedChange)="onCheckedChange($event)"></Switch>
 </StackLayout>
