initial switch to ngrx

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -5,6 +5,7 @@
 
     <Label [text]="localMessage"></Label>
     <Label [text]="localSwitchMessage"></Label>
+    <Label [text]="localSwitchChecked$ | async"></Label>
 
     <Switch (checkedChange)="onCheckedChange($event)"></Switch>
 </StackLayout>
